# mlops

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
ebay_historical_clothing_scraper/: .gitignore  README.md  clothing.csv
ebay_historical_clothing_scraper/data/: www.ebay.com_cookies.txt
ebay_historical_clothing_scraper/data/processed/: ebay_historical_cleaned.parquet  mongo_train_snapshot.csv
ebay_historical_clothing_scraper/src/ebay_scraper/: __init__.py  clothing_catalog.py  config.py  ebay_client.py  github_sync.py  runner.py  schedule_daily.py  storage.py
models/: ebay_price_xgb.joblib  ebay_price_xgb_mongo.joblib
scripts/: EXTRACT_FEATURES_FROM_MONGO.md  build_sample_dataset.py  check_mongo_connection.py  clean_ebay_exports.py  data_processing.ipynb  download_html_pages.py  export_mongo_parsed_for_training.py  extract_features_from_mongo.py  parse_saved_ebay_html.py  predict_price_rf.py  train_model.py  train_placeholder.py  train_price.py  train_price_rf.py
scripts/outputs/: mongo_llm_features.jsonl
src/clothing_mlops/: __init__.py  data_pipeline.py  mlflow_setup.py  modeling.py  service.py  vertex_pricing.py
src/clothing_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/images/: jordans.avif  levis.avif
tests/: test_service.py  test_vertex_pricing.py
