[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clothing-mlops"
version = "0.1.0"
description = "Clothing value prediction with eBay data and MLflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.10,<3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
